--- a/_data/events.yml
+++ b/_data/events.yml
@@ -11,9 +11,9 @@
 - title: >-
     The 'How' Matters: Design and Resilience
   event: MetroLab Network Summit Panel
-  description: We spend a lot of time trying to figure out what civic-university projects might produce meaning and impact for local residents and neighbors. We try to learn about local wants and needs; we try to identify our assets and resources, and we try to make it all fit together. But the what is only a piece of the puzzle. After all, even if we were able to craft the perfect project, it might still flop. Just as important to the what is the how. This panel will feature three panelists who have deep familiarity and experience with the how--and they will share their tips and tricks on what to do--and what to avoid--as you design your projects.
+  description: We spend a lot of time trying to figure out what civic-university projects might produce meaning and impact for local residents and neighbors. We try to learn about local wants and needs; we try to identify our assets and resources, and we try to make it all fit together. But the what is only a piece of the puzzle. After all, even if we were able to craft the perfect project, it might still flop. Just as important to the what is the how. This panel will feature three panelists who have deep familiarity and experience with the how--and they will share their tips and tricks on what to do--and what to avoid--as you design your projects. With Kenneth Bailey, Sabrina Dorsainvil, and Thaisa Way. Moderated by Kim Lucas. 
   live: true
-  quote: 
+  quote: "That panel was not what I expected, but by the end, I was in a whole different space of imagining the possible. That was inspirational. I'm a Planning Commissioner for a major metropolitan area and I'm passing it along to some like-minded people in my community."
   location: Chicago
   media:
   url: 
